<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/vaccine_type_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="A Vaccine Type"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/vaccineInfoImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                app:srcCompat="@drawable/astra_zeneca" />

            <TextView
                android:id="@+id/vaccineInfoTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:background="@color/orange_500"
                android:paddingLeft="12dp"
                android:paddingBottom="8dp"
                android:text="@string/astraZenecaTxt"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="1"
                android:background="@color/orange_500"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:text="@string/dosage_amount"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/dosageAmountTxtVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:text="2*(0.7ml/dose)"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:layout_weight="1"
                android:background="@color/orange_500"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:text="@string/vaccine_efficacy"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/vaccineEfficacyTxtVw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_margin"
                    android:text="85%"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:background="@color/orange_500"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/side_effects"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/sideEffectsTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1. Headache\n2. Fatigue\n3. Fever\n4. Vomit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/get_vaccinated_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin"
                android:backgroundTint="@color/orange_500"
                android:text="@string/get_vaccinated_btn" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>